# DACK_LTHT

./: CMakeLists.txt  consumer.c  example.txt  fifo_ipc.c  fifo_ipc.h  monitor.c  producer.c  received_file.txt  statistics.c  statistics.h  sync_control.c  sync_control.h
